add melhoria teste unitários