@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+        <java.version>23</java.version>
 	</properties>
 	<dependencies>
 		<!-- Spring Boot Starter Web -->
@@ -152,8 +152,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>23</source>
+                    <target>23</target>
 					<annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
@@ -174,7 +174,8 @@
 							<artifactId>spring-boot-configuration-processor</artifactId>
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
